fix: styling issue on dropdown horizontal overflow

--- a/ng/monlbl-viewer/src/app/core/components/coverage-results-display/coverage-results-display.component.css
+++ b/ng/monlbl-viewer/src/app/core/components/coverage-results-display/coverage-results-display.component.css
@@ -8,5 +8,7 @@
     line-height: 24px;
     padding: 8px; 
     word-wrap: break-word;
-    white-space: pre-wrap; 
+    word-break: break-all;
+    overflow-wrap: break-word;
+    hyphens: auto;
 }
